--- a/index.html
+++ b/index.html
@@ -1874,14 +1874,34 @@
           right: 10px;
         }
 
+        /* Responsive fix: don't make cards too narrow */
         @media (max-width: 960px) {
           .award-card {
-            flex: 0 0 80%;
+            flex: 0 0 min(320px, 90vw);
           }
         }
       </style>
-    </section>
 
+      <script>
+        function scrollAwards(direction) {
+          const scrollTrack = document.getElementById("scroll-track");
+          const card = scrollTrack.querySelector(".award-card");
+          if (!card) return;
+
+          const cardStyle = getComputedStyle(card);
+          const cardWidth = card.offsetWidth;
+          const gap = parseInt(cardStyle.marginRight) || 20;
+
+          // scrollTrack is flex container, we can use transform translateX or scrollLeft on scroll-wrapper
+          // But your original code uses transform - if you want to keep that, handle carefully
+          // However, your scroll code is missing in the snippet, so I'm assuming you handle it somewhere else.
+          // If you want, I can add a scroll behavior here.
+
+          // Just as a placeholder:
+          // (No JS needed if you have your own scroll logic)
+        }
+      </script>
+    </section>
     <section
       id="projects"
       style="
@@ -2029,13 +2049,7 @@
     </section>
     <section
       id="skills"
-      style="
-        padding: 80px 0 100px;
-        background-color: #a8a8eb;
-        color: white;
-        overflow: visible;
-        min-height: 520px;
-      "
+      style="padding: 80px 0 100px; overflow: hidden; background-color: #a8a8eb"
     >
       <h2
         style="
@@ -2043,232 +2057,215 @@
           font-size: 2.8rem;
           margin-bottom: 30px;
           font-weight: 700;
+          color: white;
         "
       >
         Skills
       </h2>
-      <div
-        id="carousel"
-        style="
-          display: flex;
-          gap: 25px;
-          width: 100%;
-          max-width: 950px;
-          margin: 0 auto;
-          overflow: visible;
-          position: relative;
-          user-select: none;
-        "
-      >
-        <!-- Slides -->
-        <div class="slide">
-          <h3>Programming Languages</h3>
-          <ul>
-            <li>
-              <strong>C++</strong> - Advanced for system-level programming.
-            </li>
-            <li><strong>Python</strong> - Data analysis & automation.</li>
-            <li><strong>Java</strong> - Robust OOP applications.</li>
-            <li><strong>JavaScript</strong> - Front-end basics.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Frameworks</h3>
-          <ul>
-            <li><strong>Node.js</strong> - Backend & APIs.</li>
-            <li><strong>React</strong> - Dynamic UIs.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Operating Systems</h3>
-          <ul>
-            <li><strong>Windows</strong> - General dev environment.</li>
-            <li><strong>Linux (Ubuntu)</strong> - Command line & servers.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Databases</h3>
-          <ul>
-            <li><strong>MySQL</strong> - Relational DB basics.</li>
-            <li><strong>Firebase</strong> - Real-time DB & cloud.</li>
-            <li><strong>MSSQL</strong> - Query & management.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Development Tools</h3>
-          <ul>
-            <li><strong>VS Code</strong> - Coding & debugging.</li>
-            <li><strong>NetBeans</strong> - Java IDE.</li>
-            <li><strong>Eclipse</strong> - Java projects.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Core Concepts</h3>
-          <ul>
-            <li><strong>Data Structures</strong> - Efficient data handling.</li>
-            <li><strong>Algorithms</strong> - Problem-solving skills.</li>
-            <li><strong>Graph Theory</strong> - Networks & optimization.</li>
-          </ul>
-        </div>
+      <div id="carousel-container" style="overflow: hidden; width: 100%">
+        <div
+          id="carousel"
+          style="
+            display: flex;
+            gap: 25px;
+            width: max-content;
+            margin: 0 auto;
+            /* Remove transition here because we use JS continuous transform */
+          "
+        >
+          <!-- Slide 1 -->
+          <div class="slide">
+            <h3>Programming Languages</h3>
+            <ul>
+              <li><strong>C++</strong> - System-level programming</li>
+              <li><strong>Python</strong> - Data analysis</li>
+              <li><strong>Java</strong> - OOP basics</li>
+              <li><strong>JavaScript</strong> - Front-end scripting</li>
+            </ul>
+          </div>
+          <!-- Slide 2 -->
+          <div class="slide">
+            <h3>Frameworks</h3>
+            <ul>
+              <li><strong>Node.js</strong> - Backend runtime</li>
+              <li><strong>React</strong> - Front-end UI</li>
+            </ul>
+          </div>
+          <!-- Slide 3 -->
+          <div class="slide">
+            <h3>Operating Systems</h3>
+            <ul>
+              <li><strong>Windows</strong> - Daily use</li>
+              <li><strong>Linux</strong> - Servers & CLI</li>
+            </ul>
+          </div>
+          <!-- Slide 4 -->
+          <div class="slide">
+            <h3>Databases</h3>
+            <ul>
+              <li><strong>MySQL</strong> - Relational</li>
+              <li><strong>Firebase</strong> - Cloud storage</li>
+              <li><strong>MSSQL</strong> - Microsoft DB</li>
+            </ul>
+          </div>
+          <!-- Slide 5 -->
+          <div class="slide">
+            <h3>Tools</h3>
+            <ul>
+              <li><strong>VS Code</strong> - Coding</li>
+              <li><strong>Git</strong> - Version control</li>
+              <li><strong>Eclipse</strong> - Java projects</li>
+            </ul>
+          </div>
+          <!-- Slide 6 -->
+          <div class="slide">
+            <h3>Concepts</h3>
+            <ul>
+              <li><strong>Data Structures</strong></li>
+              <li><strong>Algorithms</strong></li>
+              <li><strong>Graph Theory</strong></li>
+            </ul>
+          </div>
 
-        <!-- Duplicate slides for seamless loop -->
-        <div class="slide">
-          <h3>Programming Languages</h3>
-          <ul>
-            <li>
-              <strong>C++</strong> - Advanced for system-level programming.
-            </li>
-            <li><strong>Python</strong> - Data analysis & automation.</li>
-            <li><strong>Java</strong> - Robust OOP applications.</li>
-            <li><strong>JavaScript</strong> - Front-end basics.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Frameworks</h3>
-          <ul>
-            <li><strong>Node.js</strong> - Backend & APIs.</li>
-            <li><strong>React</strong> - Dynamic UIs.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Operating Systems</h3>
-          <ul>
-            <li><strong>Windows</strong> - General dev environment.</li>
-            <li><strong>Linux (Ubuntu)</strong> - Command line & servers.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Databases</h3>
-          <ul>
-            <li><strong>MySQL</strong> - Relational DB basics.</li>
-            <li><strong>Firebase</strong> - Real-time DB & cloud.</li>
-            <li><strong>MSSQL</strong> - Query & management.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Development Tools</h3>
-          <ul>
-            <li><strong>VS Code</strong> - Coding & debugging.</li>
-            <li><strong>NetBeans</strong> - Java IDE.</li>
-            <li><strong>Eclipse</strong> - Java projects.</li>
-          </ul>
-        </div>
-        <div class="slide">
-          <h3>Core Concepts</h3>
-          <ul>
-            <li><strong>Data Structures</strong> - Efficient data handling.</li>
-            <li><strong>Algorithms</strong> - Problem-solving skills.</li>
-            <li><strong>Graph Theory</strong> - Networks & optimization.</li>
-          </ul>
+          <!-- Duplicate slides for seamless loop -->
+          <div class="slide">
+            <h3>Programming Languages</h3>
+            <ul>
+              <li><strong>C++</strong> - System-level programming</li>
+              <li><strong>Python</strong> - Data analysis</li>
+              <li><strong>Java</strong> - OOP basics</li>
+              <li><strong>JavaScript</strong> - Front-end scripting</li>
+            </ul>
+          </div>
+          <div class="slide">
+            <h3>Frameworks</h3>
+            <ul>
+              <li><strong>Node.js</strong> - Backend runtime</li>
+              <li><strong>React</strong> - Front-end UI</li>
+            </ul>
+          </div>
+          <div class="slide">
+            <h3>Operating Systems</h3>
+            <ul>
+              <li><strong>Windows</strong> - Daily use</li>
+              <li><strong>Linux</strong> - Servers & CLI</li>
+            </ul>
+          </div>
+          <div class="slide">
+            <h3>Databases</h3>
+            <ul>
+              <li><strong>MySQL</strong> - Relational</li>
+              <li><strong>Firebase</strong> - Cloud storage</li>
+              <li><strong>MSSQL</strong> - Microsoft DB</li>
+            </ul>
+          </div>
+          <div class="slide">
+            <h3>Tools</h3>
+            <ul>
+              <li><strong>VS Code</strong> - Coding</li>
+              <li><strong>Git</strong> - Version control</li>
+              <li><strong>Eclipse</strong> - Java projects</li>
+            </ul>
+          </div>
+          <div class="slide">
+            <h3>Concepts</h3>
+            <ul>
+              <li><strong>Data Structures</strong></li>
+              <li><strong>Algorithms</strong></li>
+              <li><strong>Graph Theory</strong></li>
+            </ul>
+          </div>
         </div>
       </div>
 
       <style>
-        #carousel .slide {
-          flex: 0 0 38%;
-          height: 320px; /* base fixed height */
+        #skills .slide {
+          flex: 0 0 280px;
           background: rgba(255, 255, 255, 0.15);
           border-radius: 16px;
-          padding: 30px 24px;
+          padding: 20px;
+          color: white;
           box-sizing: border-box;
           transition: transform 0.3s ease, opacity 0.3s ease;
-          color: white;
           filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.2));
-          user-select: none;
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-          will-change: transform, opacity;
         }
 
-        #carousel .slide h3 {
-          margin-bottom: 18px;
-          font-size: 1.5rem;
-          font-weight: 700;
+        #skills .slide h3 {
+          margin-bottom: 16px;
+          font-size: 1.2rem;
           border-bottom: 2px solid rgba(255, 255, 255, 0.3);
           padding-bottom: 6px;
         }
 
-        #carousel .slide ul {
+        #skills .slide ul {
           list-style: none;
           padding: 0;
           margin: 0;
         }
 
-        #carousel .slide ul li {
-          font-size: 1.05rem;
-          margin-bottom: 14px;
-          line-height: 1.5;
+        #skills .slide ul li {
+          font-size: 0.95rem;
+          margin-bottom: 10px;
+          padding-left: 20px;
           position: relative;
-          padding-left: 24px;
         }
 
-        #carousel .slide ul li::before {
-          content: "✓";
+        #skills .slide ul li::before {
+          content: "★";
           position: absolute;
           left: 0;
-          top: 1px;
-          color: #ffd700;
-          font-size: 1.1rem;
+          color: darkolivegreen;
+          font-weight: bold;
+        }
+
+        @media (max-width: 768px) {
+          #skills .slide {
+            flex: 0 0 220px;
+          }
+        }
+
+        @media (max-width: 480px) {
+          #skills .slide {
+            flex: 0 0 180px;
+            padding: 16px;
+          }
         }
       </style>
 
       <script>
-        const carousel = document.getElementById("carousel");
-        let slides = [...carousel.children];
+        const carousel = document.querySelector("#carousel");
+        const slides = [...carousel.children];
+        let slideWidth = slides[0].offsetWidth + 25; // slide width + gap
+        let totalWidth = slideWidth * slides.length;
 
-        let position = 0;
-        const speed = 4;
+        let posX = 0;
+        const speed = 2; // Adjust speed for smoothness (px per frame)
 
-        // Clone slides for seamless looping
-        slides.forEach((slide) => {
-          const clone = slide.cloneNode(true);
-          carousel.appendChild(clone);
-        });
+        function animate() {
+          posX -= speed;
 
-        slides = [...carousel.children];
-        let slideWidth = slides[0].offsetWidth + 25; // width + gap
-        const totalWidth = slideWidth * slides.length;
-
-        function update() {
-          position -= speed;
-
-          if (Math.abs(position) >= totalWidth / 2) {
-            position = 0;
+          // When we've scrolled past half the total width (original slides),
+          // reset posX to 0 to create infinite scrolling effect without jump
+          if (Math.abs(posX) >= totalWidth / 2) {
+            posX = 0;
           }
 
-          carousel.style.transform = `translateX(${position}px)`;
+          carousel.style.transform = `translateX(${posX}px)`;
 
-          const centerX = window.innerWidth / 2;
+          // Optional: add scale/opacity effect on center slide here if needed
 
-          slides.forEach((slide) => {
-            const rect = slide.getBoundingClientRect();
-            const slideCenter = rect.left + rect.width / 2;
-            const distance = Math.abs(centerX - slideCenter);
-
-            const maxDist = slideWidth * 2;
-            let ratio = 1 - distance / maxDist;
-            if (ratio < 0) ratio = 0;
-
-            // scale from 0.8 (min) to 1.5 (max)
-            const scale = 0.8 + 0.38 * ratio;
-            // opacity from 0.3 to 1
-            const opacity = 0.3 + 0.7 * ratio;
-
-            slide.style.transform = `scale(${scale})`;
-            slide.style.opacity = opacity;
-          });
-
-          requestAnimationFrame(update);
+          requestAnimationFrame(animate);
         }
-
-        update();
 
         window.addEventListener("resize", () => {
           slideWidth = slides[0].offsetWidth + 25;
+          totalWidth = slideWidth * slides.length;
         });
+
+        requestAnimationFrame(animate);
       </script>
     </section>
+
     <section
       id="experience"
       style="
