--- a/index.html
+++ b/index.html
@@ -2214,7 +2214,7 @@
           content: "★";
           position: absolute;
           left: 0;
-          color: darkolivegreen;
+          color: white;
           font-weight: bold;
         }
 
@@ -2239,7 +2239,7 @@
         let totalWidth = slideWidth * slides.length;
 
         let posX = 0;
-        const speed = 2; // Adjust speed for smoothness (px per frame)
+        const speed = 3.5; // Adjust speed for smoothness (px per frame)
 
         function animate() {
           posX -= speed;
