--- a/index.html
+++ b/index.html
@@ -1818,7 +1818,7 @@
           position: absolute;
           bottom: 0;
           width: 100%;
-          color: #2a4365;
+          color: white;
           padding: 12px 16px;
           box-sizing: border-box;
         }
