--- a/index.html
+++ b/index.html
@@ -1831,7 +1831,7 @@
 
         .card-content p {
           font-size: 0.95rem;
-          color: #2a4365cc;
+          color: white;
           margin-bottom: 15px;
         }
 
