--- a/thank-you.html
+++ b/thank-you.html
@@ -5,38 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Thank You – Message Sent</title>
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Optional Bootstrap  -->
+    <!-- Bootstrap CSS link -->
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-
-    <!-- Typed.js-->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-
-    <!-- External CSS -->
-    <link href="../style.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&amp;display=swap"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome CSS link -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link href="awards/award-style.css" rel="stylesheet" />
   </head>
-
   <body>
     <!-- Toggle Button OUTSIDE nav -->
     <button id="nav-toggle-btn" aria-label="Toggle Navigation">
       <i id="nav-icon" class="fas fa-angle-up"></i>
       <span id="nav-label">Hide Nav</span>
     </button>
+
     <nav aria-label="Primary navigation">
       <ul>
         <li><a href="index.html#about">About</a></li>
@@ -45,9 +37,9 @@
         <li><a href="index.html#skills">Skills</a></li>
         <li><a href="index.html#experience">Experience</a></li>
         <li>
-          <a href="index.html#competitive" id="nav-competitive">
-            Competitive Programming
-          </a>
+          <a href="index.html#competitive" id="nav-competitive"
+            >Competitive Programming</a
+          >
         </li>
         <li><a href="index.html#awards">Awards & Activities</a></li>
         <li><a href="index.html#contact">Contact</a></li>
@@ -76,8 +68,6 @@
         </a>
       </nav>
     </main>
-
-    <!-- External JS -->
-    <script src="main.js"></script>
+    <script src="awards/awards-script.js"></script>
   </body>
 </html>
