--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <img
         alt="Background Photo"
         class="header-background extracted-style-1"
-        src="images/portfolio_cover.jpg"
+        src="images/portfolio_cover.png"
       />
       <div class="header-content extracted-style-2">
         <div class="contact-info extracted-style-3">
